v7.0.1/_sources/generated/pcdsdevices.slits.BeckhoffSlits.rst.txt
pcdsdevices.slits.BeckhoffSlits
===============================

.. currentmodule:: pcdsdevices.slits

.. autoclass:: BeckhoffSlits

    
    
    .. list-table:: Ophyd Device Components
        :header-rows: 1
        :widths: auto

        * - Attribute
          - Class
          - Suffix
          - Docs
          - Kind
          - Notes
    
        * - lightpath_summary
          - :class:`~pcdsdevices.signal.SummarySignal`
          - 
          - 
          - omitted
          - Inherited from :class:`~pcdsdevices.slits.SlitsBase`
    
        * - nominal_aperture
          - :class:`~ophyd.signal.Signal`
          - 
          - 
          - normal
          - Inherited from :class:`~pcdsdevices.slits.SlitsBase`
    
        * - xwidth
          - :class:`~pcdsdevices.slits.BeckhoffSlitPositioner`
          - 
          - 
          - hinted
          - Inherited from :class:`~pcdsdevices.slits.SlitsBase`
    
        * - ywidth
          - :class:`~pcdsdevices.slits.BeckhoffSlitPositioner`
          - 
          - 
          - hinted
          - Inherited from :class:`~pcdsdevices.slits.SlitsBase`
    
        * - xcenter
          - :class:`~pcdsdevices.slits.BeckhoffSlitPositioner`
          - 
          - 
          - normal
          - Inherited from :class:`~pcdsdevices.slits.SlitsBase`
    
        * - ycenter
          - :class:`~pcdsdevices.slits.BeckhoffSlitPositioner`
          - 
          - 
          - normal
          - Inherited from :class:`~pcdsdevices.slits.SlitsBase`
    
        * - exec_queue
          - :class:`~ophyd.signal.Signal`
          - 
          - 
          - omitted
          - 
    
        * - exec_move
          - :class:`~pcdsdevices.signal.PytmcSignal`
          - ``:GO``
          - 
          - omitted
          - 
    
        * - done_all
          - :class:`~ophyd.signal.Signal`
          - 
          - 
          - omitted
          - 
    
        * - done_top
          - :class:`~pcdsdevices.signal.PytmcSignal`
          - ``:TOP:DMOV``
          - 
          - omitted
          - 
    
        * - done_bottom
          - :class:`~pcdsdevices.signal.PytmcSignal`
          - ``:BOTTOM:DMOV``
          - 
          - omitted
          - 
    
        * - done_north
          - :class:`~pcdsdevices.signal.PytmcSignal`
          - ``:NORTH:DMOV``
          - 
          - omitted
          - 
    
        * - done_south
          - :class:`~pcdsdevices.signal.PytmcSignal`
          - ``:SOUTH:DMOV``
          - 
          - omitted
          - 
    
        * - top
          - :class:`~pcdsdevices.epics_motor.BeckhoffAxisNoOffset`
          - ``:MMS:TOP``
          - 
          - normal
          - 
    
        * - bottom
          - :class:`~pcdsdevices.epics_motor.BeckhoffAxisNoOffset`
          - ``:MMS:BOTTOM``
          - 
          - normal
          - 
    
        * - north
          - :class:`~pcdsdevices.epics_motor.BeckhoffAxisNoOffset`
          - ``:MMS:NORTH``
          - 
          - normal
          - 
    
        * - south
          - :class:`~pcdsdevices.epics_motor.BeckhoffAxisNoOffset`
          - ``:MMS:SOUTH``
          - 
          - normal
          - 
    

    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    

    
    

    
    
    .. rubric:: Methods

    
    .. automethod:: calc_lightpath_state
    .. automethod:: camonitor
    .. automethod:: configure
    .. automethod:: describe
    .. automethod:: end_monitor_thread
    .. automethod:: get
    .. automethod:: get_lightpath_state
    .. automethod:: move
    .. automethod:: mv
    .. automethod:: post_elog_status
    .. automethod:: read
    .. automethod:: read_configuration
    .. automethod:: remove
    .. automethod:: screen
    .. automethod:: set
    .. automethod:: stage_group_instances
    .. automethod:: status
    .. automethod:: stop
    .. automethod:: summary
    .. automethod:: trigger
    .. automethod:: wait
    .. automethod:: wm
    .. automethod:: wm_update
    
    

    
    
    .. rubric:: Attributes

    
    .. autoattribute:: configuration_attrs
    .. autoattribute:: connected
    .. autoattribute:: current_aperture
    .. autoattribute:: hints
    .. autoattribute:: kind
    .. autoattribute:: lightpath_cpts
    .. autoattribute:: md
    .. autoattribute:: needs_parent
    .. autoattribute:: position
    .. autoattribute:: stage_group
    .. autoattribute:: subscriptions
    
    